[package]
name = "slon"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
reqwest = { version = "0.12.8", default-features = false, features = ["json", "blocking", "rustls-tls-native-roots", "charset"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
